.blackbox/tmp/shell_tool_540eb6a90aea.log

> edificio-admin@1.0.0 start
> node src/app.js

file:///home/admin/edificio-admin/src/utils/dataValidation.js:343
        const fs = await import('fs');
                   ^^^^^

SyntaxError: Unexpected reserved word
    at compileSourceTextModule (node:internal/modules/esm/utils:340:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:146:18)
    at #translate (node:internal/modules/esm/loader:431:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:478:27)

Node.js v20.19.2
